--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,4 +3,5 @@ services:
     build: .  
     image: "quadtree"
     ports:
-      - "8080:8080"  
+      - "8080:8080"
+      - "3000:3000"  # Optional: for direct Node.js nginx access
