attempt to prevent hanging ps-id with supervisord

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -17,11 +17,17 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisord.sock
 
 [program:nodejs]
-command=node /app/app.js
+command=/usr/local/bin/node /app/app.js
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-autorestart=true
+autorestart=false
+startsecs=5
+startretries=0
+stopasgroup=true
+killasgroup=true
+exitcodes=0
+nvironment=PORT=3000
 
 [program:checknode]
 command=node -v
@@ -39,4 +45,13 @@ command=/usr/sbin/nginx -g "daemon off;"
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-autorestart=true
+autorestart=false
+startsecs=5
+startretries=0
+stopasgroup=true
+killasgroup=true
+exitcodes=0
+
+[eventlistener:shutdown]
+command=/bin/true  
+events=PROCESS_STATE_EXITED
