--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_http_version 1.1;
-        proxy_pass_header Content-Type;
+        add_header Content-Type $upstream_http_content_type;
+        add_header Cache-Control "no-cache, must-revalidate";
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
     }
