--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,18 +2,10 @@ server {
     listen 8080;
     server_name localhost;
     
-    location ~ ^/.*\.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+   location ~ ^\/.*\.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        alias /;
         proxy_pass http://127.0.0.1:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        add_header Content-Type $upstream_http_content_type;
-        add_header Cache-Control "no-cache, must-revalidate";
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
-    }
+   }
     
     location /health {
         proxy_pass http://127.0.0.1:3000/health;
@@ -26,14 +18,6 @@ server {
     location / {
         rewrite ^.*$ / break;
         proxy_pass http://127.0.0.1:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_pass_header Content-Type;
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
     }
 
     error_page 500 502 503 504 /50x.html;
