--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,17 @@ server {
     listen 8080;
     server_name localhost;
     
-   location ~ ^\/.*\.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+   location ~ ^\/.*\.(js)$ {
+        alias /;
+        proxy_set_header Content-Type "application/javascript";
+        proxy_pass http://127.0.0.1:3000;
+    }
+    location ~ ^\/.*\.(css)$ {
+        alias /;
+        proxy_set_header Content-Type "text/css";
+        proxy_pass http://127.0.0.1:3000;
+    }
+    location ~ ^\/.*\.(png|jpg|jpeg|gif|ico|svg)$ {
         alias /;
         proxy_pass http://127.0.0.1:3000;
     }
