incorrect content-type firebase debugging V2

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,15 +2,13 @@ server {
     listen 8080;
     server_name localhost;
     
-   location ~ ^\/.*\.(js)$ {
-        alias /;
-        proxy_set_header Content-Type "application/javascript";
-        proxy_pass http://127.0.0.1:3000;
+   location ~ ^\/(.*\.(js))$ {
+        proxy_pass  http://127.0.0.1:3000/$1;
+        add_header Content-Type application/javascript always;
     }
-    location ~ ^\/.*\.(css)$ {
-        alias /;
-        proxy_set_header Content-Type "text/css";
-        proxy_pass http://127.0.0.1:3000;
+    location ~ ^\/(.*\.(css))$ {
+        proxy_pass  http://127.0.0.1:3000/$1;
+        add_header Content-Type text/css always;
     }
     location ~ ^\/.*\.(png|jpg|jpeg|gif|ico|svg)$ {
         alias /;
