--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,35 +1,31 @@
 server {
     listen 8080;
     server_name localhost;
-    
-   location ~ ^\/(.*\.(js))$ {
-        proxy_pass  http://127.0.0.1:3000/$1;
-        add_header Content-Type application/javascript always;
+
+    # Set Content-Type headers for specific file types
+    location ~* \.(js)$ {
+        # Conditionally set Content-Type only if not /index.js
+        if ($uri !~ ^/index\.js$) {
+            add_header Content-Type application/javascript always;
+        }
     }
-    location ~ ^\/(.*\.(css))$ {
-        proxy_pass  http://127.0.0.1:3000/$1;
-        add_header Content-Type text/css always;
-    }
-    location ~ ^\/.*\.(png|jpg|jpeg|gif|ico|svg)$ {
-        alias /;
-        proxy_pass http://127.0.0.1:3000;
-    }
-    
-    location /health {
-        proxy_pass http://127.0.0.1:3000/health;
+
+    location / {
+
+        rewrite ^/([a-z][a-z]/|app/|quadtree/)*(.*)$ /$2 break;
+        proxy_pass http://127.0.0.1:3000$uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location / {
-        rewrite ^.*$ / break;
+    error_page 404 = @fallback;
+    location @fallback {
         proxy_pass http://127.0.0.1:3000;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
