incorrect content-type firebase debugging V4

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,9 @@
 server {
     listen 8080;
     server_name localhost;
-
+    access_log /dev/stdout;
+    error_log /dev/stderr;
+    
     # Set Content-Type headers for specific file types
     location ~* \.(js)$ {
         # Conditionally set Content-Type only if not /index.js
