--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,4 +10,13 @@ http {
     sendfile        on;
     keepalive_timeout 65;
     include /etc/nginx/conf.d/*.conf;
+    
+    
+    http 
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /dev/stdout main;  
+    error_log /dev/stderr;        
 }
