--- a/supervisord.conf
+++ b/supervisord.conf
@@ -42,8 +42,11 @@ redirect_stderr=true
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
-stdout_logfile=/dev/fd/1
+command=/usr/sbin/nginx -g "daemon off;"
+stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 redirect_stderr=true
 autorestart=false
 startsecs=5
