--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,17 +5,17 @@ server {
     error_log /dev/stderr;
     
     # Set Content-Type headers for specific file types
-    location ~* \.(js)$ {
-        # Conditionally set Content-Type only if not /index.js
-        if ($uri !~ ^/index\.js$) {
-            add_header Content-Type application/javascript always;
-        }
-    }
+    # location ~* \.(js)$ {
+    #     # Conditionally set Content-Type only if not /index.js
+    #     if ($uri !~ ^/index\.js$) {
+    #         add_header Content-Type application/javascript always;
+    #     }
+    # }
 
     location / {
 
         rewrite ^/([a-z][a-z]/|app/|quadtree/)*(.*)$ /$2 break;
-        proxy_pass http://127.0.0.1:3000$uri;
+        proxy_pass http://127.0.0.1:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
