Port agnostic setup. Dockerfile 'gettext' for supervisord.conf 'envsubst' for dynamic port assignment.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -41,19 +41,25 @@ redirect_stderr=true
 
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
-command=/usr/sbin/nginx -g "daemon off;"
+command=/bin/sh -lc "envsubst '\$PORT' \
+  < /etc/nginx/conf.d/default.conf.template \
+  > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 redirect_stderr=true
-autorestart=false
+
+autostart=true
+startsecs=0
+startretries=3
+
 startsecs=5
 startretries=0
 stopasgroup=true
 killasgroup=true
 exitcodes=0
+stopsignal=QUIT
 
 [eventlistener:shutdown]
 command=/bin/true  
